Update wiki submodule